--- a/README.html
+++ b/README.html
@@ -53,7 +53,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="what-can-dietary-patterns-tells-us" class="level1">
 <h1>What can dietary patterns tells us?</h1>
-<p>Using data from the NNMB (National Nutrition Monitoring Bureau) survey (2009–2012) on rural nutritional status, we examine the relationship between food composition and BMI (Body Mass Index). Since BMI is a known marker for lifestyle diseases such as hypertension, diabetes, and obesity, we explores how dietary patterns relate to these health risks.</p>
+<p>Using data from the NNMB (National Nutrition Monitoring Bureau) survey (2009–2012) on rural nutritional status, we examine the relationship between food composition and BMI (Body Mass Index). Since BMI is a known marker for lifestyle diseases such as hypertension, diabetes, and obesity, we explores how dietary patterns relate to these health risks. Higher BMI diets tend to have lower carbohydrates and higher fats, highlighting diet’s role in lifestyle diseases like hypertension, diabetes, and obesity.</p>
 </section>
 
 </main>
